changed text and pictures under About Section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <i class="fas fa-tachometer fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Tiling</h4>
-                        <p class="text-muted">we provide a full tiling service for walls and floors.</p>
+                        <p class="text-muted">We provide a full tiling service for walls and floors.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -121,7 +121,7 @@
                             <i class="fas far fa-building fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Waterproofing</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">We Specialize In All Waterproofing Issues</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -237,26 +237,26 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portfolio/tilling.jpeg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="text-muted">2009-2011</h4>
+                                <h4 class="text-muted">2009-2021</h4>
                                 <h4 class="subheading text-muted">Our Humble Beginnings</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">From 2009 until 2021, I was contracting for Pacific paramount properties where I started as a handyman for 2 years and I then registered my company.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/portfolio/painting.jpeg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="text-muted">March 2011</h4>
-                                <h4 class="subheading text-muted">An Agency is Born</h4>
+                                <h4 class="text-muted">2021 to date</h4>
+                                <h4 class="subheading text-muted">Our Current Position</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">We are offering a wide range of quality services in commercial and residential properties: painting, brickwalling, tiling, drywalling, waterproofing, ceilings, floor sanding, custom made furniture and general maintainance.</p></div>
                         </div>
                     </li>
-                    <li>
+                    <!--<li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -275,7 +275,7 @@
                             </div>
                             <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
                         </div>
-                    </li>
+                    </li> -->
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
